# ipgrabber

./: main.py  pyproject.toml
templates/: base.html  grabber.html  index.html
